# breakoutgame

./: CMakeLists.txt  README.md
resources/shaders/: particle.fs  particle.vs  post_processing.fs  post_processing.vs
src/: ball_object.cpp  ball_object.h  breakout.cpp  game.cpp  game.hpp  game_level.cpp  game_level.h  game_object.h  particle_generator.cpp  particle_generator.h  post_processor.cpp  post_processor.h  power_up.h  resource_manager.cpp  resource_manager.h  ruslit.cpp  ruslit.h  shader.cpp  shader.h  sprite_renderer.h  text_renderer.cpp  text_renderer.h
